compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_record_constructor_result_inference.snap
---
source: tests/fixtures.rs
assertion_line: 1994
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_record_constructor_result_inference.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
box literal infers box<i64>
stderr:
<empty>
