compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_record_path_resolution.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_record_path_resolution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
local record;imported record;unsupported nested record Boxes.box.extra
stderr:
<empty>
