compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_record_pattern_bindings.snap
---
source: tests/fixtures.rs
assertion_line: 1482
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_record_pattern_bindings.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
value:i64,label:String
stderr:
<empty>
