compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_recursion_predeclaration_policy.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_recursion_predeclaration_policy.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
direct annotated:predeclare:self recursion ok;annotated mutual:predeclare:later annotated visible;annotated to unannotated:top-down:later unannotated hidden;partial missing return:top-down:caller not fully annotated;partial missing param:top-down:caller not fully annotated;unannotated forward:top-down:future values hidden
stderr:
<empty>
