compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_rsig_type_qualification.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_rsig_type_qualification.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
head:Syntax.token,trail:Syntax.box<Syntax.token,Option<String>>,pair:(Syntax.token,List<Syntax.span>)
stderr:
<empty>
