compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_scheme_instantiate.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_scheme_instantiate.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
a#1 -> a#1
a#2 -> a#2
a#3 -> b#3 -> List<a#3> -> List<b#3>
stderr:
<empty>
