compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_spawn_message_metadata.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_spawn_message_metadata.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
inferred:ActorId<i64>
fallback:ActorId<Unknown>
stderr:
<empty>
