compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_symbol_names.snap
---
source: tests/fixtures.rs
assertion_line: 1395
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_symbol_names.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
print,input,load,tmp
stderr:
<empty>
